--- a/programme.html
+++ b/programme.html
@@ -144,6 +144,337 @@
 </style>
 
 
+
+<div class="banner-partenaires" >
+<div class="image-banner-partenaires">
+<img src="images/visuel_header_autre.png" alt="">
+<div class="intro-partenaires text-center ">
+<div class="texte-intro-partenaires">
+<h3>LE PROGRAMME</h3>
+<p>Du 24 au 25 Mai 2019, au Golf de Cap Malo <br>
+Avenue du Phare du Grand Jardin, 35520 Melesse</p>
+</div>
+</div>
+</div>
+
+</div>
+
+
+<style>
+  .texte-intro-partenaires {
+    padding-top: 8px;
+
+  }
+  .texte-intro-partenaires h3 {
+      /* margin: 130px; */
+    margin-left: 130px;
+    margin-right: 130px;
+    font-size: 15px!important;
+    /* width: 150px; */
+    /* padding: 0 26px; */
+    box-shadow: inset 0 -14px 0 red;
+    -webkit-box-shadow: inset 0 -8px 0 red;
+    -webkit-transition: background .2s ease;
+    transition: background .2s ease;
+    background-color: white;
+
+  }
+  .banner-partenaires {
+
+  }
+  .image-banner-partenaires img {
+    width: 100%;
+    z-index: 2;
+  }
+
+  .intro-partenaires {
+    position: relative;
+    z-index: 1;
+    bottom: 51px;
+    /* margin-bottom: -11px; */
+    margin: auto;
+    width: 460px;
+    height: 108px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  }
+</style>
+
+
+<div class="row">
+  <div class="texte-programme">
+  <p>L’AutoShow de Cap Malo, c’est une exposition de 29 marques regroupant une centaine de véhicules pendant 2 jours dans un cadre exceptionnel. Vous y retrouverez les dernières nouveautés des constructeurs !
+
+Amateurs ou passionnés, l’AutoShow est l’occasion pour vous de parcourir les dernières tendances en matière d’automobile. Et qui sait, de vous décider pour votre prochaine voiture ?!
+De l’élégante berline à la voiture familiale, en passant par la technologie hybride, découvrez une large gamme auto parmi laquelle vous pourrez également admirer les designs audacieux des puissantes sportives.
+
+Et pourquoi ne pas profiter pour découvrir le Golf de Cap Malo ? A la fois lieu inédit d’exposition mais aussi remarquable jardin paysager, aux portes de Rennes, vous pourrez y découvrir la pratique du golf, grâce à des initiations gratuites proposées par l’école de golf Génération Golf.
+Vous êtes golfeur, nos partenaires Callaway et Eurogolf Rennes vous invitent à découvrir et à tester les dernières nouveautés en matière d’équipement de golf.
+</p>
+</div>
+</div>
+
+<style>
+  .texte-programme {
+    margin: 0 100px;
+  }
+</style>
+<br><br><br>
+<div class="row">
+<div class="col-sm-12">
+  <img src="images/centreessai.png" alt="" class="ombre-image carre-essai">
+
+</div>
+
+</div>
+
+<style>
+
+  .carre-essai {
+    float: right;
+    padding-left: 1px;
+  }
+
+  .photo-programme {
+    float: right;
+  }
+</style>
+
+
+<div class="row">
+<div class="col-sm-12">
+  <div class="">
+    <a href="contact.html">
+  <img src="images/réservation.png" alt="" class="ombre-image carre-reservation" height="600">
+  </a>
+</div>
+</div>
+
+</div>
+
+<style>
+
+  .carre-reservation {
+    float: left;
+    padding-left: 1px;
+  }
+
+  .photo-programme {
+    float: right;
+  }
+</style>
+<br><br>
+<div class="row">
+<div class="col-sm-12">
+
+  <img src="images/golf.png" alt="" class="ombre-image carre-golf">
+
+</div>
+</div>
+
+</div>
+
+<style>
+
+  .carre-golf {
+    float: right;
+    padding-left: 1px;
+  }
+
+  .photo-programme {
+    float: right;
+  }
+</style>
+<br><br>
+<div class="row">
+<div class="col-sm-12">
+
+  <img src="images/enfant.png" alt="" class="ombre-image carre-reservation" >
+  </a>
+
+</div>
+
+</div>
+
+<style>
+
+
+</style>
+
+<br><br>
+<div class="row">
+<div class="col-sm-12">
+
+  <img src="images/restauration.png" alt="" class="ombre-image carre-restauration"
+
+</div>
+</div>
+
+</div>
+
+<style>
+
+  .carre-restauration {
+    float: right;
+    padding-left: 1px;
+  }
+
+  .photo-programme {
+    float: right;
+  }
+</style>
+<br><br>
+
+<div class="row">
+ <div class="pages-partenaires text-center">
+  <div class="row text-center">
+    <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
+
+
+
+
+      <div class="card-garage">
+        <div class="card-image-garage">
+          <img src="images/logo-citroen.png" height="100px">
+        </div>
+
+      </div>
+
+
+
+<style>
+  .card-garage {
+        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  }
+
+  .card-image-garage {
+    padding: 10px;
+  }
+</style>
+
+    </div>
+    <div class="col-sm-2 col-xs-12 margin-t-b">
+
+
+
+
+      <div class="card-garage">
+        <div class="card-image-garage">
+          <img src="images/logo-citroen.png" height="100px">
+        </div>
+
+      </div>
+
+
+
+<style>
+  .card-garage {
+        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  }
+
+  .card-image-garage {
+    padding: 10px;
+  }
+</style>
+
+    </div>
+    <div class="col-sm-2 col-xs-12 margin-t-b">
+
+
+
+
+      <div class="card-garage">
+        <div class="card-image-garage">
+          <img src="images/logo-citroen.png" height="100px">
+        </div>
+
+      </div>
+
+
+
+<style>
+  .card-garage {
+        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  }
+
+  .card-image-garage {
+    padding: 10px;
+  }
+</style>
+
+    </div>
+    <div class="col-sm-2 col-xs-12 margin-t-b">
+
+
+
+
+      <div class="card-garage">
+        <div class="card-image-garage">
+          <img src="images/logo-citroen.png" height="100px">
+        </div>
+
+      </div>
+
+
+
+<style>
+  .card-garage {
+        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  }
+
+  .card-image-garage {
+    padding: 10px;
+  }
+</style>
+
+    </div>
+    <div class="col-sm-2 col-xs-12 margin-t-b">
+
+
+
+
+      <div class="card-garage">
+        <div class="card-image-garage">
+          <img src="images/logo-citroen.png" height="100px">
+        </div>
+
+      </div>
+
+
+
+<style>
+  .card-garage {
+        -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  }
+
+  .card-image-garage {
+    padding: 10px;
+  }
+</style>
+
+    </div>
+
+  </div>
+
+</div>
+</div>
+
+<style>
+  .margin-t-b {
+    margin-bottom: 20px;
+  }
+
+  .google-map-contact {
+  margin: auto;
+
+  }
+</style>
+
 <div class="row">
 <div class="retour-en-haut">
 <div class="fleche">
