--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="navbar-wagon">
   <!-- Logo -->
-  <a href="/" class="navbar-wagon-brand">
+  <a href="index.html" class="navbar-wagon-brand">
     <img src="images/Logo_Autoshow.png" alt="logo">
   </a>
 
@@ -33,10 +33,10 @@
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">ACCUEIL</a></li>
-          <li><a href="#"></a>PARTENAIRES</li>
-          <li><a href="#">INFOS PRATIQUES</a></li>
-          <li><a href="#">CONTACTS</a></li>
+          <li><a href="index.html">ACCUEIL</a></li>
+          <li><a href="partenaires.html"></a>PARTENAIRES</li>
+          <li><a href="programme.html">INFOS PRATIQUES</a></li>
+          <li><a href="contact.html">CONTACTS</a></li>
         </ul>
       </div>
     </div>
@@ -59,7 +59,7 @@
   /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: rgb(188, 0, 0);
+  background: #C72832;
   transition: all 0.3s ease;
   height: 70px;
   display: flex;
@@ -102,8 +102,8 @@
 .navbar-wagon-link:hover {
   color: #FFFFFF;
   text-decoration: none;
-  box-shadow: inset 0 -14px 0 rgb(0, 0, 123);
-  -webkit-box-shadow: inset 0 -14px 0 rgb(0, 0, 123);
+  box-shadow: inset 0 -14px 0 #0A3E59;
+  -webkit-box-shadow: inset 0 -14px 0 #0A3E59;
   -webkit-transition: background .2s ease;
   transition: background .2s ease;
   height: 25px;
@@ -120,7 +120,7 @@
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #999999 !important;
+  color: #0A3E59 !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
@@ -206,17 +206,16 @@
 }
 
 .fond-rouge-banner {
-  position: relative;
-  background-color: rgb(188, 0, 0);
-  height: 600px;
-  width: 490px;
-  left: 215px;
+    position: relative;
+    background-color: #C72832;
+    height: 600px;
+    width: 705px;
 }
 
 .rouge-transparent-banner {
     opacity: 0.5;
     position: relative;
-    background-color: rgb(188, 0, 0);
+    background-color: #C72832;
     height: 300px;
     width: 490px;
     bottom: 479px;
@@ -235,7 +234,7 @@
 
 .en-savoir-plus-button {
     text-align: center;
-    background-color: rgb(188, 0, 0);
+    background-color: #C72832;
     color: #ffffff;
     position: relative;
     width: 214px;
@@ -257,15 +256,17 @@
 </style>
 
 <div class="presentation">
+
   <div class="texte-presentation">
     <h1>PRÉSENTATION DU SALON DE L'AUTO</h1>
+    <br>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur sequi nostrum accusamus repudiandae natus fugit, dolorem architecto voluptate dolores, voluptatum culpa optio quia eveniet animi tempora sed ex, praesentium adipisci!</p>
   </div>
 </div>
 
 <style>
 .texte-presentation {
-  margin: -627px 100px 75px 100px;
+  margin: -627px 200px 75px 200px;
 }
 </style>
 
@@ -276,9 +277,9 @@
 
 
 
-      <div class="card-garage">
-        <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+      <div class="card-garage text-center">
+        <div class="card-image-garage text-center">
+          <img src="images/logo-Nissan.png" height="100px">
         </div>
 
       </div>
@@ -330,7 +331,7 @@
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/Nissan.png" height="100px">
         </div>
 
       </div>
@@ -356,7 +357,7 @@
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/Mercedes.png" height="100px">
         </div>
 
       </div>
@@ -382,7 +383,7 @@
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/Mazda-logo.png" height="100px">
         </div>
 
       </div>
@@ -666,14 +667,14 @@
   }
 
   .footer {
-  background: rgb(0, 0, 123);
+  background: #0A3E59;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 150px;
   padding: 0px 50px;
   color: #ffffff;
-  width: 101%;
+  width: 100%;
 }
 .footer-links {
   text-decoration: none;
