--- a/programme.html
+++ b/programme.html
@@ -17,7 +17,7 @@
 
 <div class="navbar-wagon">
   <!-- Logo -->
-  <a href="/" class="navbar-wagon-brand">
+  <a href="index.html" class="navbar-wagon-brand">
     <img src="images/Logo_Autoshow.png" alt="logo">
   </a>
 
@@ -33,10 +33,10 @@
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">ACCUEIL</a></li>
-          <li><a href="#"></a>PARTENAIRES</li>
-          <li><a href="#">INFOS PRATIQUES</a></li>
-          <li><a href="#">CONTACTS</a></li>
+          <li><a href="index.html">ACCUEIL</a></li>
+          <li><a href="partenaires.html"></a>PARTENAIRES</li>
+          <li><a href="programme.html">INFOS PRATIQUES</a></li>
+          <li><a href="contact.html">CONTACTS</a></li>
         </ul>
       </div>
     </div>
@@ -59,7 +59,7 @@
   /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: rgb(188, 0, 0);
+  background: #C72832;
   transition: all 0.3s ease;
   height: 70px;
   display: flex;
@@ -102,8 +102,8 @@
 .navbar-wagon-link:hover {
   color: #FFFFFF;
   text-decoration: none;
-  box-shadow: inset 0 -14px 0 rgb(0, 0, 123);
-  -webkit-box-shadow: inset 0 -14px 0 rgb(0, 0, 123);
+  box-shadow: inset 0 -14px 0 #0A3E59;
+  -webkit-box-shadow: inset 0 -14px 0 #0A3E59;
   -webkit-transition: background .2s ease;
   transition: background .2s ease;
   height: 25px;
@@ -534,7 +534,7 @@ Vous êtes golfeur, nos partenaires Callaway et Eurogolf Rennes vous invitent à
   }
 
   .footer {
-  background: rgb(0, 0, 123);
+  background: #0A3E59;
   display: flex;
   align-items: center;
   justify-content: space-between;
