--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
         </div>
         <div class="en-savoir-plus-button">
-          <a href="#">EN SAVOIR PLUS</a>
+          <a href="programme.html">EN SAVOIR PLUS</a>
         </div>
       </div>
       <div class="col-sm-6">
@@ -169,7 +169,14 @@
         </div>
       </div>
     </div>
-
+        <div class="texte-fond-blanc-banner-mobile">
+          <h4 style="color: rgb(0, 0, 123)">VENEZ DÉCOUVRIR</h4>
+          <h3 style="color: rgb(0, 0, 123)"><strong>L'AUTOSHOW AU GOLF DE CAP MALO</strong></h3><br>
+          <p style="color: black; opacity: 0.5;">Le 24 et 25 Mai 2019, partez à la découverte des plus grandes marques automobiles dans le cadre unique d'un golfe</p>
+        </div>
+        <div class="en-savoir-plus-button-mobile">
+          <a href="programme.html">EN SAVOIR PLUS</a>
+        </div>
 
 <!--     <div class="info-banner">
       <div class="texte-info-banner">
@@ -187,6 +194,32 @@
 
 /* deskop */
 
+.en-savoir-plus-button-mobile {
+      text-align: center;
+    background-color: #C72832;
+    color: #ffffff;
+
+    width: 214px;
+    padding: 23px 3px;
+
+
+    /* border: 1px solid; */
+    color: #ffffff;
+    text-decoration: none;
+                -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  display:none;
+  margin: auto;
+}
+
+.en-savoir-plus-button-mobile a {
+  text-decoration: none;
+  color: white;
+
+}
+.texte-fond-blanc-banner-mobile {
+  display: none;
+}
 .fond-blanc-banner {
   padding-left: 27px;
   padding-top: 50px;
@@ -255,12 +288,18 @@
   text-decoration: none;
   color: white;
 
-
-
 }
 
 /* mobile */
 @media (max-width: 500px) {
+
+.en-savoir-plus-button-mobile {
+  display: block;
+}
+
+.texte-fond-blanc-banner-mobile {
+  display:block;
+}
 
 .en-savoir-plus-button {
   display: none;
@@ -748,7 +787,7 @@
       <p>Avenue du Phare du Grand Jardin</p>
       <p>35520 MELESSE</p>
       <div class="boutton-contact text-center">
-        CONTACT
+        <a href="contact.html">CONTACT</a>
       </div>
     </div>
 
@@ -778,35 +817,48 @@
   height: 150px;
   padding: 0px 150px;
   color: #ffffff;
-}
-.footer-links {
-  text-decoration: none;
-  color: #ffffff;
-  display: flex;
+  }
+  .footer-links {
+    text-decoration: none;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+  }
+  .footer-links a {
+    color: #ffffff;
+
+    text-decoration: none;
+    font-size: 24px;
+    padding: 0px 10px;
+  }
+
+  .pages1 a {
+    color: #ffffff!important;
+  }
+  .footer-links a:hover {
+    opacity: 1;
+  }
+  .footer .fa-heart {
+    color: #D23333;
+  }
+
+  .boutton-contact {
+    background-color: red;
+    padding: 10px 0;
+  }
+
+    @media (max-width: 500px) {
+
+        .footer {
+          text-align: center;
+  background: #0A3E59;
+  display: block;
   align-items: center;
-}
-.footer-links a {
+  justify-content: space-between;
+  height: 400px;
+  padding: 20px 50px;
   color: #ffffff;
-
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-
-.pages1 a {
-  color: #ffffff!important;
-}
-.footer-links a:hover {
-  opacity: 1;
-}
-.footer .fa-heart {
-  color: #D23333;
-}
-
-.boutton-contact {
-  background-color: red;
-  padding: 10px 0;
-}
+  }
 </style>
 
   </body>
