--- a/contact.html
+++ b/contact.html
@@ -195,11 +195,33 @@
     background-color: #ffffff;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
   }
+      @media (max-width: 500px) {
+  .intro-partenaires {
+    position: relative;
+    z-index: 1;
+        bottom: 20px;
+    /* bottom: 51px; */
+    /* margin-bottom: -11px; */
+    margin: auto;
+     width: 353px;
+    height: 108px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  }
+      }
+
+
 </style>
 
 <div class="row">
   <div class="col-sm-offset-1 col-sm-5 google-map-contact text-center">
+    <div class="google-map-deskop">
     <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=avenue%20du%20phare%20du%20grnd%20jardin%20melesse&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Werbung: <a href="https://www.pureblack.de">Pure Black GmbH</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+    </div>
+    <div class="google-map-mobile">
+          <div class="mapouter"><div class="gmap_canvas"><iframe width="350" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=avenue%20du%20phare%20du%20grnd%20jardin%20melesse&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Werbung: <a href="https://www.pureblack.de">Pure Black GmbH</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+    </div>
+    </div>
   </div>
   <div class="col-sm-6 formulaire-contact">
     <br><br>
@@ -277,6 +299,36 @@
   </div>
 </div>
 
+
+<style>
+      .google-map-mobile {
+        display: none;
+      }
+      @media (max-width: 500px) {
+
+
+        .google-map-mobile {
+          display: block;
+          text-align: left;
+        }
+
+        .google-map-deskop {
+          display: none;
+        }
+        .gmap_canvas {
+    overflow: hidden;
+    background: none!important;
+    height: 500px;
+        width: 361px!important;
+}
+.mapouter {
+    position: relative;
+    text-align: right;
+    height: 500px;
+    width: 388px;
+}
+      }
+</style>
 <br><br>
 <div class="row">
  <div class="pages-partenaires text-center">
@@ -457,7 +509,7 @@
       <p>Avenue du Phare du Grand Jardin</p>
       <p>35520 MELESSE</p>
       <div class="boutton-contact text-center">
-        CONTACT
+        <a href="contact.html">CONTACT</a>
       </div>
     </div>
 
@@ -468,7 +520,7 @@
     height: 100px;
     width: 100px;
     float: right;
-    background-color: red;
+    background-color: #C72832;
     vertical-align: middle;
   }
 
@@ -485,38 +537,50 @@
   align-items: center;
   justify-content: space-between;
   height: 150px;
-  padding: 0px 50px;
+  padding: 0px 150px;
   color: #ffffff;
-  width: 101%;
-}
-.footer-links {
-  text-decoration: none;
-  color: #ffffff;
-  display: flex;
+  }
+  .footer-links {
+    text-decoration: none;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+  }
+  .footer-links a {
+    color: #ffffff;
+
+    text-decoration: none;
+    font-size: 24px;
+    padding: 0px 10px;
+  }
+
+  .pages1 a {
+    color: #ffffff!important;
+  }
+  .footer-links a:hover {
+    opacity: 1;
+  }
+  .footer .fa-heart {
+    color: #D23333;
+  }
+
+  .boutton-contact {
+    background-color: red;
+    padding: 10px 0;
+  }
+
+    @media (max-width: 500px) {
+
+        .footer {
+          text-align: center;
+  background: #0A3E59;
+  display: block;
   align-items: center;
-}
-.footer-links a {
+  justify-content: space-between;
+  height: 400px;
+  padding: 20px 50px;
   color: #ffffff;
-
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-
-.pages1 a {
-  color: #ffffff!important;
-}
-.footer-links a:hover {
-  opacity: 1;
-}
-.footer .fa-heart {
-  color: #D23333;
-}
-
-.boutton-contact {
-  background-color: red;
-  padding: 10px 0;
-}
+  }
 </style>
 
   </body>
