--- a/partenaires.html
+++ b/partenaires.html
@@ -32,10 +32,11 @@
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="index.html">ACCUEIL</a></li>
-          <li><a href="partenaires.html"></a>PARTENAIRES</li>
-          <li><a href="programme.html">INFOS PRATIQUES</a></li>
-          <li><a href="contact.html">CONTACTS</a></li>
+          <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a>
+></li>
+          <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</li>
+          <li><a href="programme.html" class="navbar-wagon-item navbar-wagon-link">INFOS PRATIQUES</a></li>
+          <li><a href="contact.html" class="navbar-wagon-item navbar-wagon-link">CONTACTS</a></li>
         </ul>
       </div>
     </div>
@@ -46,9 +47,11 @@
     <div class="dropdown">
       <i class="fas fa-bars dropdown-toggle" data-toggle="dropdown" role="button"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Host</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Messagese</a></li>
+         <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a>
+></li>
+          <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</li>
+          <li><a href="programme.html" class="navbar-wagon-item navbar-wagon-link">INFOS PRATIQUES</a></li>
+          <li><a href="contact.html" class="navbar-wagon-item navbar-wagon-link">CONTACTS</a></li>
       </ul>
     </div>
   </div>
@@ -194,6 +197,21 @@
     background-color: #ffffff;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
   }
+
+        @media (max-width: 500px) {
+  .intro-partenaires {
+    position: relative;
+    z-index: 1;
+        bottom: 20px;
+    /* bottom: 51px; */
+    /* margin-bottom: -11px; */
+    margin: auto;
+     width: 353px;
+    height: 108px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  }
+      }
 </style>
 
 
@@ -219,7 +237,7 @@
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/Logo-honda.jpg" height="100px">
 </div>
 </div>
 <style>
@@ -235,7 +253,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/Logo-Mercedes.png" height="100px">
 </div>
 </div>
 <style>
@@ -251,7 +269,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/logo-Nissan.png" height="100px">
 </div>
 </div>
 <style>
@@ -267,7 +285,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/logo-Opel.png" height="100px">
 </div>
 </div>
 <style>
@@ -283,7 +301,7 @@ padding: 10px;
     <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/logo_ Landrover.jpg" height="100px">
 </div>
 </div>
 <style>
@@ -299,7 +317,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/logo_ Mitsubishi.png" height="100px">
 </div>
 </div>
 <style>
@@ -315,7 +333,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/logo_ Renault.png" height="100px">
 </div>
 </div>
 <style>
@@ -331,7 +349,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/logo_bmw.jpeg" height="100px">
 </div>
 </div>
 <style>
@@ -347,7 +365,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/logo_lexus.png" height="100px">
 </div>
 </div>
 <style>
@@ -363,7 +381,7 @@ padding: 10px;
         <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/Logo_mini.jpg" height="100px">
 </div>
 </div>
 <style>
@@ -379,7 +397,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/Logo_opel.png" height="100px">
 </div>
 </div>
 <style>
@@ -395,7 +413,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/Logo_peugeot.png" height="100px">
 </div>
 </div>
 <style>
@@ -411,7 +429,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
      <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/Logo_porsche.png" height="100px">
 </div>
 </div>
 <style>
@@ -427,7 +445,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/LogoVolkswagen.jpeg" height="100px">
 </div>
 </div>
 <style>
@@ -443,215 +461,7 @@ padding: 10px;
             <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
      <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-            <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-            <div class="col-sm-offset-1 col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
-</div>
-</div>
-<style>
-.card-garage {
--webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
-.card-image-garage {
-padding: 10px;
-}
-</style>
-    </div>
-    <div class="col-sm-2 col-xs-12 margin-t-b">
-      <div class="card-garage">
-<div class="card-image-garage">
-<img src="images/logo-citroen.png" height="100px">
+<img src="images/Mazda-logo.png" height="100px">
 </div>
 </div>
 <style>
@@ -681,16 +491,11 @@ padding: 10px;
 </style>
     </div>
   </div>
-
-</div>
-</div>
-
 <style>
   .margin-t-b {
     margin-bottom: 20px;
   }
 </style>
-
 
 
 
@@ -722,7 +527,7 @@ padding: 10px;
       <p>Avenue du Phare du Grand Jardin</p>
       <p>35520 MELESSE</p>
       <div class="boutton-contact text-center">
-        CONTACT
+        <a href="contact.html">CONTACT</a>
       </div>
     </div>
 
@@ -733,7 +538,7 @@ padding: 10px;
     height: 100px;
     width: 100px;
     float: right;
-    background-color: red;
+    background-color: #C72832;
     vertical-align: middle;
   }
 
@@ -750,38 +555,50 @@ padding: 10px;
   align-items: center;
   justify-content: space-between;
   height: 150px;
-  padding: 0px 50px;
+  padding: 0px 150px;
   color: #ffffff;
-  width: 101%;
-}
-.footer-links {
-  text-decoration: none;
-  color: #ffffff;
-  display: flex;
+  }
+  .footer-links {
+    text-decoration: none;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+  }
+  .footer-links a {
+    color: #ffffff;
+
+    text-decoration: none;
+    font-size: 24px;
+    padding: 0px 10px;
+  }
+
+  .pages1 a {
+    color: #ffffff!important;
+  }
+  .footer-links a:hover {
+    opacity: 1;
+  }
+  .footer .fa-heart {
+    color: #D23333;
+  }
+
+  .boutton-contact {
+    background-color: red;
+    padding: 10px 0;
+  }
+
+    @media (max-width: 500px) {
+
+        .footer {
+          text-align: center;
+  background: #0A3E59;
+  display: block;
   align-items: center;
-}
-.footer-links a {
+  justify-content: space-between;
+  height: 400px;
+  padding: 20px 50px;
   color: #ffffff;
-
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-
-.pages1 a {
-  color: #ffffff!important;
-}
-.footer-links a:hover {
-  opacity: 1;
-}
-.footer .fa-heart {
-  color: #D23333;
-}
-
-.boutton-contact {
-  background-color: red;
-  padding: 10px 0;
-}
+  }
 </style>
 
   </body>
