--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="index.html">ACCUEIL</a></li>
-          <li><a href="partenaires.html"></a>PARTENAIRES</li>
-          <li><a href="programme.html">INFOS PRATIQUES</a></li>
-          <li><a href="contact.html">CONTACTS</a></li>
+          <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a>
+></li>
+          <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</li>
+          <li><a href="programme.html" class="navbar-wagon-item navbar-wagon-link">INFOS PRATIQUES</a></li>
+          <li><a href="contact.html" class="navbar-wagon-item navbar-wagon-link">CONTACTS</a></li>
         </ul>
       </div>
     </div>
@@ -47,9 +48,11 @@
     <div class="dropdown">
       <i class="fas fa-bars dropdown-toggle" data-toggle="dropdown" role="button"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Host</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Messagese</a></li>
+         <li><a href="index.html" class="navbar-wagon-item navbar-wagon-link">ACCUEIL</a>
+></li>
+          <li><a href="partenaires.html" class="navbar-wagon-item navbar-wagon-link">PARTENAIRES</li>
+          <li><a href="programme.html" class="navbar-wagon-item navbar-wagon-link">INFOS PRATIQUES</a></li>
+          <li><a href="contact.html" class="navbar-wagon-item navbar-wagon-link">CONTACTS</a></li>
       </ul>
     </div>
   </div>
