logo contact partenaires / retouche lexus partenaires.

--- a/contact.html
+++ b/contact.html
@@ -333,7 +333,7 @@
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+         <img src="images/logo_ Renault.png" height="100px">
         </div>
 
       </div>
@@ -359,7 +359,7 @@
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/logo-Nissan.png" height="100px">
         </div>
 
       </div>
@@ -385,7 +385,7 @@
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/logo-Mercedes.png" height="100px">
         </div>
 
       </div>
@@ -411,7 +411,7 @@
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/Logo-honda.jpg" height="100px">
         </div>
 
       </div>
@@ -437,7 +437,7 @@
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/logo-Opel.png" height="100px">
         </div>
 
       </div>
