--- a/partenaires.html
+++ b/partenaires.html
@@ -365,7 +365,7 @@ padding: 10px;
     <div class="col-sm-2 col-xs-12 margin-t-b">
       <div class="card-garage">
 <div class="card-image-garage">
-<img src="images/logo_lexus.png" height="100px">
+<img src="images/logo_lexus.png">
 </div>
 </div>
 <style>
