--- a/programme.html
+++ b/programme.html
@@ -384,7 +384,7 @@ Vous êtes golfeur, nos partenaires Callaway et Eurogolf Rennes vous invitent à
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/logo_ Renault.png" height="100px">
         </div>
 
       </div>
@@ -410,7 +410,7 @@ Vous êtes golfeur, nos partenaires Callaway et Eurogolf Rennes vous invitent à
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/logo-Nissan.png" height="100px">
         </div>
 
       </div>
@@ -436,7 +436,7 @@ Vous êtes golfeur, nos partenaires Callaway et Eurogolf Rennes vous invitent à
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/logo-Mercedes.png" height="100px">
         </div>
 
       </div>
@@ -462,7 +462,7 @@ Vous êtes golfeur, nos partenaires Callaway et Eurogolf Rennes vous invitent à
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/Logo-honda.jpg" height="100px">
         </div>
 
       </div>
@@ -488,7 +488,7 @@ Vous êtes golfeur, nos partenaires Callaway et Eurogolf Rennes vous invitent à
 
       <div class="card-garage">
         <div class="card-image-garage">
-          <img src="images/logo-citroen.png" height="100px">
+          <img src="images/logo-Opel.png" height="100px">
         </div>
 
       </div>
